Refactoring Arena  SummaryReport